# setupr

./: .flake8  .gitignore  .gitlint  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.rst  LICENSE  Makefile  README.md  SECURITY.md  Taskfile.yml  mkdocs.yml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  on-merge-to-main.yml  on-pull-request.yml  on-push-main.yml  on-release-main.yml  semantic-pull-request.yml
.github/workflows/run-checks/: action.yml
.github/workflows/setup-poetry-env/: action.yml
artifacts/: pytest-3.10.txt  pytest-3.10.xml
docs/: development.md  index.md  installation.md  modules.md  requirements.md  to-do.md  usage.md
drakkar/: __init__.py  commands.py  console.py  get_url.py  gpg.py  pre_flight.py  print.py
drekkar/: console.py
setupr/: Worldr-MST-installation-PGP-key.asc  __init__.py  commands.py  console.py  downloader.py  gbucket.py  get_url.py  gpg.py  pre_flight.py  print.py  schema.py  utils.py
tests/: charon-lord-dunsany-bad.sig  charon-lord-dunsany-good.sig  charon-lord-dunsany.txt  conftest.py  ranni-invalid.env.yaml  ranni-invalid.sa.json  ranni-valid.env.yaml  runme-v1.0.0.sh  runme-v1.0.0.sig  test_commands.py  test_console.py  test_downloader.py  test_downloader_functional.py  test_gbucket.py  test_get_url.py  test_get_url_functional.py  test_gpg.py  test_pre_flight.py  test_print.py  test_schema.py  test_utils.py
